create-license/main/default/objects/Opportunity/fields/TrialEndDate__c.field-meta.xml
<CustomField>
    <fullName>TrialEndDate__c</fullName>
    <description>Trial End Date</description>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>