create-license/main/default/objects/Opportunity/fields/TrialStartDate__c.field-meta.xml
<CustomField>
    <fullName>TrialStartDate__c</fullName>
    <description>Trial Start Date</description>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>