create-license/main/default/objects/Opportunity/validationRules/ValidateTrialDates.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateTrialDates</fullName>
    <active>true</active>
    <description>Ensures the trials and after they begin</description>
    <errorConditionFormula>TrialEnd_Date__c &lt; TrialStartDate__c</errorConditionFormula>
    <errorMessage>The Trial End Date must be after the Trial Start Date.</errorMessage>
    <errorDisplayField>TrialEndDate__c</errorDisplayField>
</ValidationRule>